src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_No__c</fullName>
        <label>Check No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <formula>Training_Event__r.Account__r.FID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent_Date__c</fullName>
        <label>Invoice Sent Date</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Entered_Date__c</fullName>
        <label>Payment Entered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Received_Date__c</fullName>
        <label>Payment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>LOA / Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Amount__c</fullName>
        <formula>Training_Event__r.TE_Contract_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount on Opportunity record</inlineHelpText>
        <label>Total Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Fee__c</fullName>
        <formula>Training_Event__r.Trainer_Fee_Per_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fee Per Day from Training Event</inlineHelpText>
        <label>Training Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LOA_Pending</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Training_Event__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>LOA / Pending</value>
        </filters>
        <label>LOA / Pending</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Training_Event__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open</label>
    </listViews>
    <listViews>
        <fullName>Open1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Training_Event__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Payment_Received_Date__c</columns>
        <columns>Invoice_Sent_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open</label>
    </listViews>
    <listViews>
        <fullName>Overdue</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Training_Event__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Overdue</value>
        </filters>
        <label>Overdue</label>
    </listViews>
    <listViews>
        <fullName>Paid</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Training_Event__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Paid</label>
    </listViews>
    <nameField>
        <label>Invoice No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>